Bug 388907 - Crash on closing images
Summary: Crash on closing images
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2018-01-13 14:04 UTC by Halla Rempt
Modified: 2018-02-22 13:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Halla Rempt 2018-01-13 14:04:09 UTC
Application: krita (4.0.0-beta1 (git 26f6401))

Qt Version: 5.9.2
Frameworks Version: 5.40.0
Operating System: Linux 4.4.104-18.44-default x86_64
Distribution: "openSUSE Leap 42.2"

-- Information about the crash:
I have four large images open, one was modified; on closing all images, this crash occurred.

-- Backtrace:
Application: Krita (krita), signal: Aborted
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f7ef7743940 (LWP 22054))]

Thread 15 (Thread 0x7f7d58d94700 (LWP 23248)):
#0  0x00007f7eeafef468 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f7eecbe7348 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQt5Core.so.5
#2  0x00007f7eecbe36d0 in ?? () from /usr/lib64/libQt5Core.so.5
#3  0x00007f7eecbe65cd in ?? () from /usr/lib64/libQt5Core.so.5
#4  0x00007f7eeafea744 in start_thread () from /lib64/libpthread.so.0
#5  0x00007f7eebfdeaad in clone () from /lib64/libc.so.6

Thread 14 (Thread 0x7f7d5a597700 (LWP 23247)):
#0  0x00007f7eeafef468 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f7eecbe7348 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQt5Core.so.5
#2  0x00007f7eecbe36d0 in ?? () from /usr/lib64/libQt5Core.so.5
#3  0x00007f7eecbe65cd in ?? () from /usr/lib64/libQt5Core.so.5
#4  0x00007f7eeafea744 in start_thread () from /lib64/libpthread.so.0
#5  0x00007f7eebfdeaad in clone () from /lib64/libc.so.6

Thread 13 (Thread 0x7f7d5ce70700 (LWP 23246)):
#0  0x00007f7eeafef468 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f7eecbe7348 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQt5Core.so.5
#2  0x00007f7eecbe36d0 in ?? () from /usr/lib64/libQt5Core.so.5
#3  0x00007f7eecbe65cd in ?? () from /usr/lib64/libQt5Core.so.5
#4  0x00007f7eeafea744 in start_thread () from /lib64/libpthread.so.0
#5  0x00007f7eebfdeaad in clone () from /lib64/libc.so.6

Thread 12 (Thread 0x7f7d6106a700 (LWP 23245)):
#0  0x00007f7eeafef468 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f7eecbe7348 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQt5Core.so.5
#2  0x00007f7eecbe36d0 in ?? () from /usr/lib64/libQt5Core.so.5
#3  0x00007f7eecbe65cd in ?? () from /usr/lib64/libQt5Core.so.5
#4  0x00007f7eeafea744 in start_thread () from /lib64/libpthread.so.0
#5  0x00007f7eebfdeaad in clone () from /lib64/libc.so.6

Thread 11 (Thread 0x7f7d59595700 (LWP 23244)):
#0  0x00007f7eeafef468 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f7eecbe7348 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQt5Core.so.5
#2  0x00007f7eecbe36d0 in ?? () from /usr/lib64/libQt5Core.so.5
#3  0x00007f7eecbe65cd in ?? () from /usr/lib64/libQt5Core.so.5
#4  0x00007f7eeafea744 in start_thread () from /lib64/libpthread.so.0
#5  0x00007f7eebfdeaad in clone () from /lib64/libc.so.6

Thread 10 (Thread 0x7f7cc0d3e700 (LWP 23243)):
#0  0x00007f7eeafef468 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f7eecbe7348 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQt5Core.so.5
#2  0x00007f7eecbe36d0 in ?? () from /usr/lib64/libQt5Core.so.5
#3  0x00007f7eecbe65cd in ?? () from /usr/lib64/libQt5Core.so.5
#4  0x00007f7eeafea744 in start_thread () from /lib64/libpthread.so.0
#5  0x00007f7eebfdeaad in clone () from /lib64/libc.so.6

Thread 9 (Thread 0x7f7caba65700 (LWP 23242)):
#0  0x00007f7eeafef468 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f7eecbe7348 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQt5Core.so.5
#2  0x00007f7eecbe36d0 in ?? () from /usr/lib64/libQt5Core.so.5
#3  0x00007f7eecbe65cd in ?? () from /usr/lib64/libQt5Core.so.5
#4  0x00007f7eeafea744 in start_thread () from /lib64/libpthread.so.0
#5  0x00007f7eebfdeaad in clone () from /lib64/libc.so.6

Thread 8 (Thread 0x7f7cab264700 (LWP 23241)):
#0  0x00007f7eeafef468 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f7eecbe7348 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQt5Core.so.5
#2  0x00007f7eecbe36d0 in ?? () from /usr/lib64/libQt5Core.so.5
#3  0x00007f7eecbe65cd in ?? () from /usr/lib64/libQt5Core.so.5
#4  0x00007f7eeafea744 in start_thread () from /lib64/libpthread.so.0
#5  0x00007f7eebfdeaad in clone () from /lib64/libc.so.6

Thread 7 (Thread 0x7f7eab13e700 (LWP 22083)):
#0  0x00007f7eebfd620d in poll () from /lib64/libc.so.6
#1  0x00007f7ee81a5314 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f7ee81a542c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f7eecdf0ddb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#4  0x00007f7eecd9e01b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#5  0x00007f7eecbe1eaa in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#6  0x00007f7edc205ed2 in ?? () from /usr/lib64/libQt5Quick.so.5
#7  0x00007f7eecbe65cd in ?? () from /usr/lib64/libQt5Core.so.5
#8  0x00007f7eeafea744 in start_thread () from /lib64/libpthread.so.0
#9  0x00007f7eebfdeaad in clone () from /lib64/libc.so.6

Thread 6 (Thread 0x7f7eb0b9f700 (LWP 22082)):
#0  0x00007f7eebfd620d in poll () from /lib64/libc.so.6
#1  0x00007f7ee81a5314 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f7ee81a542c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f7eecdf0dbc in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#4  0x00007f7eecd9e01b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#5  0x00007f7eecbe1eaa in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#6  0x00007f7ed7cd9468 in ?? () from /usr/lib64/libQt5Qml.so.5
#7  0x00007f7eecbe65cd in ?? () from /usr/lib64/libQt5Core.so.5
#8  0x00007f7eeafea744 in start_thread () from /lib64/libpthread.so.0
#9  0x00007f7eebfdeaad in clone () from /lib64/libc.so.6

Thread 5 (Thread 0x7f7ebc256700 (LWP 22081)):
#0  0x00007f7eeafef0bf in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f7eecbe73fb in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQt5Core.so.5
#2  0x00007f7eededa019 in ?? () from /usr/lib64/libQt5Widgets.so.5
#3  0x00007f7eecbe65cd in ?? () from /usr/lib64/libQt5Core.so.5
#4  0x00007f7eeafea744 in start_thread () from /lib64/libpthread.so.0
#5  0x00007f7eebfdeaad in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x7f7ebba55700 (LWP 22077)):
#0  0x00007f7eebfaf05d in nanosleep () from /lib64/libc.so.6
#1  0x00007f7eecdf083d in ?? () from /usr/lib64/libQt5Core.so.5
#2  0x00007f7eecbe59f5 in QThread::msleep(unsigned long) () from /usr/lib64/libQt5Core.so.5
#3  0x00007f7ef5b3715a in KisTileDataSwapper::run (this=0x7f7ef6003d20 <_ZZN12_GLOBAL__N_116Q_QGS_s_instance13innerFunctionEvE6holder+64>) at /home/boud/dev/krita/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:97
#4  0x00007f7eecbe65cd in ?? () from /usr/lib64/libQt5Core.so.5
#5  0x00007f7eeafea744 in start_thread () from /lib64/libpthread.so.0
#6  0x00007f7eebfdeaad in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7f7ed4a82700 (LWP 22058)):
#0  0x00007f7eebfd620d in poll () from /lib64/libc.so.6
#1  0x00007f7ee81a5314 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f7ee81a542c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f7eecdf0dbc in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#4  0x00007f7eecd9e01b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#5  0x00007f7eecbe1eaa in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#6  0x00007f7ef05767e5 in ?? () from /usr/lib64/libQt5DBus.so.5
#7  0x00007f7eecbe65cd in ?? () from /usr/lib64/libQt5Core.so.5
#8  0x00007f7eeafea744 in start_thread () from /lib64/libpthread.so.0
#9  0x00007f7eebfdeaad in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f7edf2b9700 (LWP 22057)):
#0  0x00007f7eebfd620d in poll () from /lib64/libc.so.6
#1  0x00007f7ef013a3c2 in ?? () from /usr/lib64/libxcb.so.1
#2  0x00007f7ef013bfaf in xcb_wait_for_event () from /usr/lib64/libxcb.so.1
#3  0x00007f7ee11db969 in ?? () from /usr/lib64/libQt5XcbQpa.so.5
#4  0x00007f7eecbe65cd in ?? () from /usr/lib64/libQt5Core.so.5
#5  0x00007f7eeafea744 in start_thread () from /lib64/libpthread.so.0
#6  0x00007f7eebfdeaad in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f7ef7743940 (LWP 22054)):
[KCrash Handler]
#6  0x00007f7eebf298d7 in raise () from /lib64/libc.so.6
#7  0x00007f7eebf2acaa in abort () from /lib64/libc.so.6
#8  0x00007f7eecbd256e in QMessageLogger::fatal(char const*, ...) const () from /usr/lib64/libQt5Core.so.5
#9  0x00007f7ef34bc88c in kis_assert_common (assertion=assertion@entry=0x7f7ebff970be "dummy", file=file@entry=0x7f7ebff96f88 "/home/boud/dev/krita/plugins/dockers/animation/timeline_frames_model.cpp", line=line@entry=300, throwException=throwException@entry=false, isIgnorable=isIgnorable@entry=false) at /home/boud/dev/krita/libs/global/kis_assert.cpp:90
#10 0x00007f7ef34bcbea in kis_assert_recoverable (assertion=assertion@entry=0x7f7ebff970be "dummy", file=file@entry=0x7f7ebff96f88 "/home/boud/dev/krita/plugins/dockers/animation/timeline_frames_model.cpp", line=line@entry=300) at /home/boud/dev/krita/libs/global/kis_assert.cpp:103
#11 0x00007f7ebff6a510 in TimelineFramesModel::slotCurrentNodeChanged (this=0x14a50400, node=...) at /home/boud/dev/krita/plugins/dockers/animation/timeline_frames_model.cpp:300
#12 0x00007f7ebff5b707 in TimelineDocker::setCanvas (this=0x14a4d090, canvas=<optimized out>) at /home/boud/dev/krita/plugins/dockers/animation/timeline_docker.cpp:122
#13 0x00007f7ef4cb3e18 in KoCanvasControllerWidget::Private::activate (this=<optimized out>) at /home/boud/dev/krita/libs/flake/KoCanvasControllerWidget.cpp:152
#14 0x00007f7ef7090a5a in KisViewManager::setCurrentView (this=0x12b2d8f0, view=view@entry=0x30983d10) at /home/boud/dev/krita/libs/ui/KisViewManager.cpp:484
#15 0x00007f7ef705ae4d in KisMainWindow::setActiveView (this=this@entry=0x1253f070, view=view@entry=0x30983d10) at /home/boud/dev/krita/libs/ui/KisMainWindow.cpp:1282
#16 0x00007f7ef705d6ab in KisMainWindow::setActiveSubWindow (this=this@entry=0x1253f070, window=<optimized out>) at /home/boud/dev/krita/libs/ui/KisMainWindow.cpp:2127
#17 0x00007f7ef705d7bb in KisMainWindow::subWindowActivated (this=0x1253f070) at /home/boud/dev/krita/libs/ui/KisMainWindow.cpp:1977
#18 0x00007f7ef706a05b in KisMainWindow::qt_static_metacall (_o=0x1253f070, _c=<optimized out>, _id=<optimized out>, _a=0x7ffe4e8232a0) at /home/boud/dev/b-krita/libs/ui/moc_KisMainWindow.cpp:346
#19 0x00007f7eecdc91df in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQt5Core.so.5
#20 0x00007f7eede2fc2f in QMdiArea::subWindowActivated(QMdiSubWindow*) () from /usr/lib64/libQt5Widgets.so.5
#21 0x00007f7eede33f5e in ?? () from /usr/lib64/libQt5Widgets.so.5
#22 0x00007f7eede3550c in ?? () from /usr/lib64/libQt5Widgets.so.5
#23 0x00007f7eede359ad in ?? () from /usr/lib64/libQt5Widgets.so.5
#24 0x00007f7eecdc91df in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQt5Core.so.5
#25 0x00007f7eede3ad96 in QMdiSubWindow::windowStateChanged(QFlags<Qt::WindowState>, QFlags<Qt::WindowState>) () from /usr/lib64/libQt5Widgets.so.5
#26 0x00007f7eede42a29 in ?? () from /usr/lib64/libQt5Widgets.so.5
#27 0x00007f7eede359c7 in ?? () from /usr/lib64/libQt5Widgets.so.5
#28 0x00007f7eecdc91df in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQt5Core.so.5
#29 0x00007f7eede7828e in QTabBar::currentChanged(int) () from /usr/lib64/libQt5Widgets.so.5
#30 0x00007f7eede7ce4d in QTabBar::setCurrentIndex(int) () from /usr/lib64/libQt5Widgets.so.5
#31 0x00007f7eede7fb5e in QTabBar::mousePressEvent(QMouseEvent*) () from /usr/lib64/libQt5Widgets.so.5
#32 0x00007f7eede37557 in ?? () from /usr/lib64/libQt5Widgets.so.5
#33 0x00007f7eedd175d0 in QWidget::event(QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#34 0x00007f7eede7dcd3 in QTabBar::event(QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#35 0x00007f7eedcdbcbc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#36 0x00007f7eedce30ac in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#37 0x00007f7ef702c747 in KisApplication::notify (this=<optimized out>, receiver=0x14b9e0a0, event=0x7ffe4e823dc0) at /home/boud/dev/krita/libs/ui/KisApplication.cpp:600
#38 0x00007f7eecd9fd25 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#39 0x00007f7eedce1f29 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/libQt5Widgets.so.5
#40 0x00007f7eedd2fcf1 in ?? () from /usr/lib64/libQt5Widgets.so.5
#41 0x00007f7eedd32253 in ?? () from /usr/lib64/libQt5Widgets.so.5
#42 0x00007f7eedcdbcbc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#43 0x00007f7eedce2a10 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#44 0x00007f7ef702c747 in KisApplication::notify (this=<optimized out>, receiver=0x12516cd0, event=0x7ffe4e824280) at /home/boud/dev/krita/libs/ui/KisApplication.cpp:600
#45 0x00007f7eecd9fd25 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#46 0x00007f7eed36380d in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib64/libQt5Gui.so.5
#47 0x00007f7eed3653c5 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib64/libQt5Gui.so.5
#48 0x00007f7eed3438ab in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Gui.so.5
#49 0x00007f7ee122d5b0 in ?? () from /usr/lib64/libQt5XcbQpa.so.5
#50 0x00007f7ee81a5134 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#51 0x00007f7ee81a5388 in ?? () from /usr/lib64/libglib-2.0.so.0
#52 0x00007f7ee81a542c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#53 0x00007f7eecdf0dbc in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#54 0x00007f7eecd9e01b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#55 0x00007f7eecda65e4 in QCoreApplication::exec() () from /usr/lib64/libQt5Core.so.5
#56 0x00000000004057a1 in main (argc=3, argv=<optimized out>) at /home/boud/dev/krita/krita/main.cc:306

Possible duplicates by query: bug 373953, bug 373883, bug 366243, bug 365992, bug 365985.

Reported using DrKonqi
Comment 1 Halla Rempt 2018-02-22 13:34:24 UTC
Git commit 0953fd03b4613fe4f501d92ecb4d946555587788 by Boudewijn Rempt.
Committed on 16/02/2018 at 14:15.
Pushed by rempt into branch 'master'.

Do not assert if the dummiesFacade->dummyForNode returns 0

This is perfectly normal and can happen when Krita is closing
views on shutdown.

M  +5    -1    plugins/dockers/animation/timeline_frames_model.cpp

https://commits.kde.org/krita/0953fd03b4613fe4f501d92ecb4d946555587788