Do not assert if the dummiesFacade->dummyForNode returns 0

This is perfectly normal and can happen when Krita is closing
views on shutdown.

BUG:388907